# dart-footing-reconciler

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  HANDOFF.md  LICENSE  README.md  playwright.config.ts  pyproject.toml
docs/: accuracy-backlog.md  adoption-review-2026-06-22-footing-prompt.md  architecture-overview-2026-06-26.md  audit-reconciliation-report-design.md  corpus-expansion-2026-06-22.md  domain-model.md  reviewer-lens-mvp.md  tokenized_asset_disclosure_lens.md
docs/adr/: 0001-core-first-mcp-wrapper.md  0002-claude-direct-html-ui-implementation.md  0003-signature-driven-verification-not-category-dispatch.md  0004-note-tab-verification-surfacing.md  0005-pyodide-single-engine-over-js-port.md  0006-schema-contract-and-semantic-layer-consolidation.md  0007-structure-aware-footing.md  0008-canonical-amount-locator.md  0009-locator-review-findings.md  0010-locator-code-review-findings.md  0011-fp-slice-review-findings.md  0012-entity-keyed-reconciliation-model.md  0013-b2b-code-review-findings.md  0015-report-validation-ledger-and-cross-module-orchestration.md  0016-report-validation-plan-review-findings.md  0017-ledger-stage1-code-review-findings.md  0018-entity-key-core-emit-promotion.md  0019-entity-key-core-emit-review-findings.md  0020-stage2a-signal-outbox-lease-slice.md  0021-stage2a-signal-outbox-review-findings.md  0022-validation-scope-boundary-pdf-dsd-only.md  0023-disclosure-completeness-advisory-class.md  0024-disclosure-completeness-review-findings.md  0025-note-semantic-extraction-layer.md
docs/handoff/: 2026-06-17-parse-uncertain-reason-codes.md  2026-06-27-report-validation-result-ledger-stage1a.md  2026-06-28-entity-key-core-emit.md  2026-06-28-stage2a-signal-outbox.md  2026-06-29-disclosure-omission-candidate.md
docs/validation/: 2026-05-16-audit-workpaper-corpus.md  2026-05-16-footing-smoke.md  2026-05-16-manufacturing-30.md  2026-05-25-multi-company-workpaper.md  2026-05-26-phase1-unresolved-taxonomy.md  2026-05-31-ab-difference-triage.md  (+4 more)
plans/: 2026-06-07-note-tab-verification.md  2026-06-27-report-validation-ledger.md
schema/: cross_module_signal.schema.json
scripts/: check_per_company_snapshot.py  vendor-pyodide.sh
tests/: test_amount_compare.py  test_amount_locator.py  test_amounts.py  test_audit_workbook.py  test_build_verify_app.py  test_check_pipeline.py  test_checks_cfs_note.py  test_checks_fs_note.py  test_checks_model.py  test_checks_note_bridges.py  test_checks_note_note.py  test_checks_prior_column.py  test_checks_prior_year.py  test_checks_reconciliation.py  test_checks_statement_ties.py  test_checks_totals.py  test_checks_totals_structure.py  test_cli.py  test_cli_validate.py  test_cli_workpaper.py  test_corpus.py  test_coverage.py  test_cross_module_signal.py  test_dart_fetch.py  test_disclosure_completeness.py  test_document.py  test_e2e_smoke.py  test_election_workpaper_classification.py  test_election_workpaper_extraction.py  test_election_workpaper_models.py  test_election_workpaper_package.py  test_election_workpaper_repository.py  test_evidence_candidates.py  test_excel_report.py  test_footing.py  test_formula_discovery.py  test_formula_templates.py  test_html_tables.py  test_label_resolver.py  test_layout_formula_assertions.py  (+33 more)
(+102 files in other folders)
