[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dart-footing-reconciler"
version = "0.1.0"
description = "Audit-grade DART DSD/HTML footing and cash flow reconciliation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "capitalparser" },
]
keywords = ["dart", "korea", "audit", "accounting", "cash-flow", "footing", "reconciliation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.8",
    "typer>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
mcp = [
    "mcp>=1.0",
]
reports = [
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.scripts]
dart-footing = "dart_footing_reconciler.cli:app"

[project.urls]
Homepage = "https://github.com/capitalparser/09_dart_footing_reconciler"
Repository = "https://github.com/capitalparser/09_dart_footing_reconciler"
Issues = "https://github.com/capitalparser/09_dart_footing_reconciler/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dart_footing_reconciler"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
